fix : #42 Senior-LedState 매핑 수정 및 대상자 리스트 조회 API 수정사항 반영