@@ -3,8 +3,7 @@ package org.farm.fireflyserver.domain.senior.service;
 import lombok.RequiredArgsConstructor;
 import org.farm.fireflyserver.common.exception.EntityNotFoundException;
 import org.farm.fireflyserver.common.response.ErrorCode;
-import org.farm.fireflyserver.domain.account.persistence.entity.Account;
-import org.farm.fireflyserver.domain.care.persistence.entity.Care;
+import org.farm.fireflyserver.domain.led.persistence.repository.LedStateRepository;
 import org.farm.fireflyserver.domain.led.web.dto.response.LedStateDto;
 import org.farm.fireflyserver.domain.manager.persistence.ManagerRepository;
 import org.farm.fireflyserver.domain.manager.persistence.entity.Manager;
@@ -16,15 +15,14 @@ import org.farm.fireflyserver.domain.senior.web.dto.request.RegisterSeniorDto;
 import org.farm.fireflyserver.domain.senior.web.dto.request.RequestSeniorDto;
 import org.farm.fireflyserver.domain.senior.web.dto.response.SeniorDetailDto;
 import org.farm.fireflyserver.domain.senior.web.dto.response.SeniorInfoDto;
-import org.farm.fireflyserver.domain.senior.web.dto.response.SeniorStateDto;
 import org.farm.fireflyserver.domain.senior.web.mapper.SeniorMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 import java.time.Period;
-import java.util.Comparator;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 import static org.farm.fireflyserver.common.response.ErrorCode.MANAGER_NOT_FOUND;
@@ -36,6 +34,7 @@ public class SeniorServiceImpl implements SeniorService {
 
     private final SeniorRepository seniorRepository;
     private final ManagerRepository managerRepository;
+    private final LedStateRepository ledStateRepository;
     private final SeniorMapper seniorMapper;
 
     // 대상자 등록
@@ -55,55 +54,45 @@ public class SeniorServiceImpl implements SeniorService {
     @Override
     public List<SeniorInfoDto> getSeniorInfo() {
         List<Senior> seniors = seniorRepository.findAll();
-
         return seniors.stream()
-                .map(senior -> {
-                    String[] manager = getManagerInfo(senior);
-                    SeniorStateDto seniorState = getSeniorState(senior);
-                    List<LedStateDto> ledState = getLedStates(senior);
-
-                    return SeniorInfoDto.of(senior, manager[0], manager[1], seniorState, ledState);
-                })
-                .collect(Collectors.toList());
-    }
-
-    // 대상자 담당자 정보
-    private String[] getManagerInfo(Senior senior) {
-        Manager manager = senior.getManager();
-
-        String name = manager.getName();
-        String phone = manager.getPhoneNum();
-        return new String[]{
-                name != null ? name : "",
-                phone != null ? phone : ""
-        };
-    }
-
-    private SeniorStateDto getSeniorState(Senior senior) {
-        return senior.getSeniorStatus() != null
-                ? SeniorStateDto.from(senior.getSeniorStatus())
-                : null;
-    }
-
-    private List<LedStateDto> getLedStates(Senior senior) {
-        return senior.getLedStates().stream()
-                .map(LedStateDto::of)
-                .collect(Collectors.toList());
+                .map(this::mapToSeniorInfoDto)
+                .toList();
     }
 
     // 대상자 검색
     @Override
     public List<SeniorInfoDto> searchSeniors(Boolean isActive, String keywordType, String keyword) {
         List<Senior> seniors = seniorRepository.searchSeniors(isActive, keywordType, keyword);
-
         return seniors.stream()
-                .map(s -> {
-                    String[] manager = getManagerInfo(s);
-                    SeniorStateDto seniorState = getSeniorState(s);
-                    return SeniorInfoDto.of(s, manager[0], manager[1], seniorState, getLedStates(s));
-                })
-                .collect(Collectors.toList());
+                .map(this::mapToSeniorInfoDto)
+                .toList();
     }
+
+    private SeniorInfoDto mapToSeniorInfoDto(Senior senior) {
+        Integer lastActTime = Optional.ofNullable(senior.getSeniorStatus())
+                .map(SeniorStatus::getLastActTime)
+                .orElse(null);
+        String deviceStatus = lastActTime != null ? checkLedStatus(lastActTime) : "정보 없음";
+
+        List<LedStateDto> ledStates = ledStateRepository.findByLedMtchnSn(senior.getLedMtchnSn())
+                .stream()
+                .map(LedStateDto::of)
+                .toList();
+        return SeniorInfoDto.of(senior, lastActTime, deviceStatus, ledStates);
+    }
+
+    private static String checkLedStatus(Integer lastActTime) {
+
+        if (lastActTime <= 24) {
+            return "정상 작동";
+        } else if (lastActTime <= 72) {
+            return "점검 요망";
+        } else {
+            return "점검 필요";
+        }
+
+    }
+
 
     @Override
     public SeniorDetailDto getSeniorDetail(Long seniorId) {
